fixed img sizing on mobile version

--- a/public/stylesheet/customstyle.css
+++ b/public/stylesheet/customstyle.css
@@ -104,6 +104,10 @@ a.btn:hover {
   background-color: #4A4A4A;
 
 }
+ .img-size {
+      max-width: 183px;
+      text-align: center;
+    }
 .landing-column {
   background-color: #787E89;
 }
@@ -118,7 +122,7 @@ a.btn:hover {
 .profileImage {
   margin: 0 auto;
   display: block;
-  border: 5px solid #fff;
+  border: 5px solid #40EC9A;;
   border-radius: 50%;
 }
 
